<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- 
	# to run acceptance from CI (ie. start containers, deploy apps, run tests and stop containers) 
	mvn clean install -Pacceptance -o
	
	# to start containers for Development purposes: 
	mvn clean package cargo:run
	
	Compatibility Matrix:
	---------------------
	chromedriver-linux-2.41  -> Chrome v67-69
	chromedriver-linux-2.40  -> Chrome v66-68
	chromedriver-linux-2.37  -> Chrome v66-68
	geckodriver-linux-0.21.0 -> Firefox 57+ & Selenium 3.11+ 
	geckodriver-linux-0.20.1 -> Firefox ???
	
	
	-->
  <modelVersion>4.0.0</modelVersion>
  <name>${project.groupId}.${project.artifactId}</name>
  <groupId>com.redhat.gps.pathfinder</groupId>
  <artifactId>pathfinder-acceptance</artifactId>
  <version>1.0.2-SNAPSHOT</version>
    
	<properties>
		<cucumber.version>1.1.8</cucumber.version> <!-- 1.8 is the latest -->
	</properties>

	<build>
		<plugins>
			<!-- disable test by default, acceptance will use the failsafe plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>brms</id>
			<activation><activeByDefault>false</activeByDefault></activation>
			<build>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<filtering>true</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.1</version>
						<configuration>
							<source>1.7</source>
							<target>1.7</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven2-plugin</artifactId>
						<version>1.1.3</version>
						<!-- 
						<version>1.4.19</version>
						 -->
						<executions>
							<execution>
								<id>start-container</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>stop-container</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<container>
								<!-- Tomcat deploy info @ https://github.com/droolsjbpm/kie-wb-distributions/blob/master/kie-wb/kie-wb-distribution-wars/src/main/tomcat7/README.txt -->
								<!-- tomcat -> http://repo1.maven.org/maven2/org/apache/tomcat/tomcat/7.0.35/tomcat-7.0.35.zip -->
								<containerId>tomcat7x</containerId>
								<artifactInstaller>
									<groupId>org.apache.tomcat</groupId>
									<artifactId>tomcat</artifactId>
									<version>7.0.35</version>
									<!--
									<version>7.0.68</version>
									<version>8.5.0</version>
									-->
								</artifactInstaller>
								<output>${project.build.directory}/logs/container.log</output>
								<log>${project.build.directory}/logs/cargo-plugin.log</log>
								<timeout>120000</timeout>
								<systemProperties>
							  	<target.server>http://localhost:8082</target.server>
								</systemProperties>
								<!-- these end up in <tomcat_home>/common/lib -->
								<dependencies>
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-api</artifactId>
									</dependency>
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-log4j12</artifactId>
									</dependency>
									<dependency>
										<groupId>log4j</groupId>
										<artifactId>log4j</artifactId>
									</dependency>
								</dependencies>
							</container>
							<configuration>
								<properties>
									<!--
										-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 -Xnoagent
										-Dcom.sun.management.jmxremote.port=6000
										-Dcom.sun.management.jmxremote.authenticate=false
										-Dcom.sun.management.jmxremote.ssl=false
									-->
									<cargo.jvmargs>
										-Xmx1024m
										-XX:MaxPermSize=256m
									</cargo.jvmargs>
									<cargo.servlet.port>16080</cargo.servlet.port>
								</properties>
								<configfiles>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/server.xml</file>
										<todir>conf/</todir>
										<tofile>server.xml</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/tomcat-users.xml</file>
										<todir>conf/</todir>
										<tofile>tomcat-users.xml</tofile>
									</configfile>
									<configfile>
										<file>${project.build.directory}/classes/tomcat7x/context.xml</file>
										<todir>conf/</todir>
										<tofile>context.xml</tofile>
									</configfile>
								</configfiles>
							</configuration>
								<deployables>
								    <!--
								    <deployable>
								        <groupId>org.sonatype.nexus</groupId>
								        <artifactId>nexus-webapp</artifactId>
								        <type>war</type>
								    </deployable>
								    -->
									<deployable>
										<groupId>org.kie</groupId>
										<artifactId>kie-drools-wb-distribution-wars</artifactId>
										<classifier>tomcat7.0</classifier>
										<type>war</type>
										<properties>
											<context>business-central</context>
										</properties>
									</deployable>
									<deployable>
										<groupId>org.jboss.quickstarts.brms6</groupId>
										<artifactId>order-service</artifactId>
										<type>war</type>
										<properties>
											<context>order-service</context>
										</properties>
									</deployable>
								</deployables>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.kie.maven.plugins</groupId>
						<artifactId>maven-kie-deployer-plugin</artifactId>
						<version>1.0.4-SNAPSHOT</version>
						<executions>
							<execution>
								<id>deploy-kie-modules</id>
								<phase>package</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
								<configuration>
									<debug>true</debug>
									<serverUri>http://localhost:16080/business-central</serverUri>
									<username>admin</username>
									<password>admin</password>
									<timeoutInSeconds>3600</timeoutInSeconds>
									<deployables>
										<deployable>
											<groupId>org.jboss.quickstarts.brms6</groupId>
											<artifactId>business-rules</artifactId>
											<version>6.0.0-SNAPSHOT</version>
											<strategy>PER_PROCESS_INSTANCE</strategy> <!-- SINGLETON, PRE_REQUEST or PER_PROCESS_INSTANCE -->
										</deployable>
									</deployables>
								</configuration>
							</execution>
						</executions>
						<dependencies>
							<!--  TODO: seem to be getting this error on Jenkins sometimes, so i added this to try to solve it
							A required class was missing while executing org.jboss.kie.maven:maven-kie-deployer-plugin:1.0.0:deploy: org/apache/http/HttpException
							-->
					        <dependency>
					            <groupId>org.apache.httpcomponents</groupId>
					            <artifactId>httpclient</artifactId>
					            <version>4.2.5</version>
					        </dependency>
					        <dependency>
					            <groupId>com.jayway.restassured</groupId>
					            <artifactId>rest-assured</artifactId>
					            <version>1.8.1</version>
					        </dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<profile>
            <id>acceptance</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.15</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.17</version>
                        <configuration>
                            <failIfNoTests>true</failIfNoTests>
                            <parallel>none</parallel>
                            <threadCount>1</threadCount>
                            <includes>
                                <include>**/*RunCucumber*Test*.java</include>
                            </includes>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>verify</id>
                                <goals>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>

	<dependencies>
		<!--
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>23.0</version>
		</dependency>
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.9</version>
		</dependency>
		
		<!-- cucumber bdd framework -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm</artifactId>
			<version>1.1.8</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.1.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.1.8</version>
			<scope>test</scope>
		</dependency>
        
		<!-- for http interactions -->
		<dependency>
			<groupId>com.jayway.restassured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.2.5</version>
		</dependency>
		
		
		
<!-- 
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-chrome-driver</artifactId>
        <version>3.13.0</version>
    </dependency>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-firefox-driver</artifactId>
        <version>3.10.0</version>
    </dependency>
 -->
 
 <!-- 
 linux - https://chromedriver.storage.googleapis.com/2.37/chromedriver_linux64.zip
 osx - https://chromedriver.storage.googleapis.com/2.37/chromedriver_mac64.zip
  -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>3.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.12.0</version>
            <scope>test</scope>
        </dependency>
        
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-server</artifactId>
                <version>3.12.0</version>
            </dependency>
            
         <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
            <scope>test</scope>
        </dependency>
    <!-- 
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>3.13.0</version>
    </dependency>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-server</artifactId>
        <version>3.13.0</version>
    </dependency>  
    -->
        
	</dependencies>
</project>
